--- a/ghi/app/src/App.css
+++ b/ghi/app/src/App.css
@@ -17,7 +17,11 @@ button:hover {
     bottom: 0;
     background: rgb(255, 255, 255. 5.0);
 }
-
+/* HOMEPAGE */
+.body-page{
+    margin:0;
+	min-height:100vh;
+}
 /* NAVBAR/LINKS */
 
 .nav-link {
