--- a/ghi/app/src/App.css
+++ b/ghi/app/src/App.css
@@ -1,7 +1,8 @@
 /* ALL */
 html{
     background-color: rgb(246, 241, 233);
-    color: rgb(79, 32, 13)
+    color: rgb(79, 32, 13);
+    font-family: Arial, Helvetica, sans-serif;
 }
 img {
     max-height: 300px;
@@ -22,6 +23,24 @@ button:hover {
     margin:0;
 	min-height:100vh;
 }
+
+.home-img {
+    mix-blend-mode: multiply;
+}
+
+.bird-info{
+    max-width: 400px;
+}
+.login-lg{
+    position: absolute;
+    right: 7%
+}
+.login-sm{
+    position: absolute;
+    right: 11%
+}
+
+
 /* NAVBAR/LINKS */
 
 .nav-link {
@@ -42,7 +61,7 @@ button:hover {
     background-color: rgb(255, 217, 61);
     top:0px;
     left:0px;
-    height: 100%;
+    min-height: 70px;
     width:100%;
 }
 
